--- a/public/index.html
+++ b/public/index.html
@@ -37,5 +37,13 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <footer class="page-footer white">
+      <div class="footer-copyright grey darken-2">
+        <div class="container">
+          © 2018 SmaT powered by KINC.
+          <a class="grey-text text-lighten-4 right" href="#!">Github</a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
