--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
       <div class="footer-copyright grey darken-2">
         <div class="container">
           © 2018 SmaT powered by KINC.
-          <a class="grey-text text-lighten-4 right" href="#!">Github</a>
+          <a class="grey-text text-lighten-4 right" href="https://github.com/kinc-shinshu">Github</a>
         </div>
       </div>
     </footer>
